# NextGen-Banking-API

./: .dockerignore  .gitignore  Makefile  babel.cfg  celerybeat-schedule-shm  celerybeat-schedule-wal  development.yml  main.py  pyproject.toml
.envs/: .env.example
backend/: requirements.txt
backend/Docker/development/fastapi/: Dockerfile  entrypoint.sh  start.sh
backend/Docker/development/traefik/: traefik.yml
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: home.py
backend/app/api/routes/auth/: activate.py  google.py  login.py  logout.py  password_reset.py  refresh.py  register.py
backend/app/api/services/: oauth_service.py  user_auth.py
backend/app/auth/: models.py  schema.py  utils.py
backend/app/auth/oauth/: models.py
backend/app/core/: celery_app.py  config.py  db.py  health.py  i18n.py  logging.py  middleware.py  model_registry.py
backend/app/core/emails/: base.py  config.py  tasks.py
backend/app/core/emails/templates/: account_lockout.html  account_lockout.txt  activation.html  activation.txt  base.html  base.txt  login_otp.html  login_otp.txt  password_reset.html  password_reset.txt
backend/app/core/services/: account_lockout.py  activation_email.py  login_otp.py  password_reset.py
backend/app/locales/ar/LC_MESSAGES/: messages.po
docs/: I18N_GUIDE.md  TRANSLATION_WORKFLOW.md
migrations/versions/: 0723cbc5d2ba_add_user_preferred_language.py  49a875651ae0_add_user_table.py  aad4cbf2eb88_add_user_providers_table.py  c1d2e3f4a5b6_make_id_no_nullable.py
scripts/: compile_translations.py
(+4 files in other folders)
