[project]
name = "banking-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "fastapi[standard]>=0.124.0",
    "greenlet==3.1.1",
    "psycopg[binary,pool]>=3.3.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings==2.7.0",
    "sqlmodel>=0.0.27",
]
